--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,6 +11,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Checkout submodules
       uses: textbook/git-checkout-submodule-action@2.0.0
+    - name: Install deps
+      run: sudo apt-get -y install mesa-common-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
