--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout submodules
       uses: textbook/git-checkout-submodule-action@2.0.0
     - name: Install deps
-      run: sudo apt-get -y install mesa-common-dev libopenal-dev libcurl4-openssl-dev
+      run: sudo apt-get -y install mesa-common-dev libopenal-dev libcurl4-openssl-dev libgl1-mesa-dev
     - name: Build
       run: cargo build --verbose
     - name: Test
