--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v1
       
     - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@2.0.0
+      run: git submodule init && git submodule update
       
     - name: Install deps
       run: sudo apt-get -y update && sudo apt-get -y install mesa-common-dev libopenal-dev libcurl4-openssl-dev libgl1-mesa-dev
@@ -52,7 +52,7 @@ jobs:
     - uses: actions/checkout@v1
       
     - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@2.0.0
+      run: git submodule init && git submodule update
       
     - name: Install nightly
       uses: actions-rs/toolchain@v1
@@ -74,7 +74,7 @@ jobs:
     - uses: actions/checkout@v1
       
     - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@2.0.0
+      run: git submodule init && git submodule update
       
     - name: Install nightly
       uses: actions-rs/toolchain@v1
