--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,9 +8,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-      
-    - name: Checkout submodules
-      run: git submodule init && git submodule update
+      with:
+        submodules: recursive
       
     - name: Install deps
       run: sudo apt-get -y update && sudo apt-get -y install mesa-common-dev libopenal-dev libcurl4-openssl-dev libgl1-mesa-dev
@@ -50,9 +49,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-      
-    - name: Checkout submodules
-      run: git submodule init && git submodule update
+      with:
+        submodules: recursive
       
     - name: Install nightly
       uses: actions-rs/toolchain@v1
@@ -72,9 +70,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-      
-    - name: Checkout submodules
-      run: git submodule init && git submodule update
+      with:
+        submodules: recursive
       
     - name: Install nightly
       uses: actions-rs/toolchain@v1
