always just build bindings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,10 @@ version = "0.1.0"
 authors = ["SpiralP <spiral.palmer@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+bindgen = "0.53.2"
+cc = "1.0.50"
+fs_extra = "1.1.0"
 
 [dependencies]
 arrayvec = "0.5.1"
-
-[build-dependencies]
-bindgen = { version = "0.53.2", optional = true }
-cc = "1.0.50"
-fs_extra = "1.1.0"
