--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 authors = ["SpiralP <spiral.palmer@gmail.com>"]
 edition = "2018"
 
+[dependencies]
+paste = "0.1.10"
+pin-project = "0.4.8"
+
 [build-dependencies]
 bindgen = "0.53.2"
 cc = "1.0.50"
 fs_extra = "1.1.0"
 regex = "1.3.6"
-
-[dependencies]
-arrayvec = "0.5.1"
-paste = "0.1.10"
