remove weird offset on Gfx_Make2DQuad

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: doc
+          args: --all-features
 
       - name: Deploy docs
         uses: peaceiris/actions-gh-pages@v3
