--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,6 +2,13 @@ name: Rust
 
 on: [push]
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+
 jobs:
   windows:
     runs-on: windows-latest
@@ -18,7 +25,9 @@ jobs:
 
       - name: Install deps
         run: |
-          iwr -useb get.scoop.sh | iex
+          iwr -useb get.scoop.sh -outfile install-scoop.ps1
+          .\install-scoop.ps1 -RunAsAdmin
+          rm install-scoop.ps1
           echo "$HOME\scoop\shims" >> $env:GITHUB_PATH
           echo "C:\ProgramData\scoop\shims" >> $env:GITHUB_PATH
           scoop install aria2
@@ -86,7 +95,7 @@ jobs:
           args: -- --nocapture
 
   mac:
-    runs-on: macOS-latest
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v1
