--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,6 +41,9 @@ jobs:
           override: true
           components: rustfmt
 
+      - name: setup-msbuild
+        uses: microsoft/setup-msbuild@v1.1
+
       - name: Build
         uses: actions-rs/cargo@v1
         with:
@@ -54,6 +57,7 @@ jobs:
 
       - name: Deploy docs
         uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./target/doc
