--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Build docs
         uses: actions-rs/cargo@v1
+        if: github.ref == 'refs/heads/master'
         with:
           command: doc
           args: --all-features
