--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 publish = false
 
 [dependencies]
+cstr_core = { optional = true, version = "0.2" }
+libc = { optional = true, version = "0.2", default-features = false }
+libm = { optional = true, version = "0.2" }
 paste = "1"
 
 [build-dependencies]
@@ -13,3 +16,7 @@ bindgen = "0.59"
 cc = "1"
 fs_extra = "1"
 regex = "1"
+
+[features]
+default = []
+no_std = ["cstr_core", "libc", "libm"]
