--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "classicube-sys"
 version = "3.0.0+classicube.1.3.6"
+
 authors = ["SpiralP <spiral.palmer@gmail.com>"]
+description = "Rust C bindings for ClassiCube."
+documentation = "https://docs.rs/classicube-sys"
 edition = "2021"
-publish = false
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/SpiralP/rust-classicube-sys"
+
 
 [dependencies]
 cstr_core = { optional = true, version = "0.2" }
@@ -20,3 +26,8 @@ regex = "1"
 [features]
 default = []
 no_std = ["cstr_core", "libc", "libm"]
+
+
+[package.metadata.release]
+pre-release-commit-message = "Release {{version}}"
+tag-message = "Release version {{version}}"
