--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "classicube-sys"
-version = "3.0.1"
+version = "3.0.2+classicube.1.3.6"
 
 authors = ["SpiralP <spiral.palmer@gmail.com>"]
 description = "Rust C bindings for ClassiCube."
