--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,11 +56,12 @@ jobs:
           command: doc
 
       - name: Deploy docs
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./target/doc
+          force_orphan: true
 
       - name: Test
         uses: actions-rs/cargo@v1
