--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,28 @@
-name: Rust
+name: Build
 
-on: [push]
+on:
+  pull_request:
+    branches: [master, main]
+  push:
+    branches: ["*"]
+    tags: ["*"]
+  workflow_dispatch:
 
 concurrency:
-  group: ${{ github.ref }}
+  group: build-${{ github.ref }}
   cancel-in-progress: true
 
 permissions:
-  contents: write
+  contents: read # for checkout
 
 jobs:
+  linux_nix:
+    uses: SpiralP/github-reusable-workflows/.github/workflows/build.yml@b913f7d3fca196da0722371cd7c7c5dfeb11d05a # main
+
   windows:
     runs-on: windows-latest
+    permissions:
+      contents: write # for publishing docs
 
     steps:
       - name: Set git to use LF
