--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,86 +16,59 @@ permissions:
   contents: read # for checkout
 
 jobs:
-  linux_nix:
+  linux-nix:
     uses: SpiralP/github-reusable-workflows/.github/workflows/build.yml@c486e35ce06f991c4565d2d8064948aa5b520047 # main
 
-  windows:
+  windows-x86_64:
     runs-on: windows-2025
     permissions:
       contents: write # for publishing docs
-
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: SpiralP/rust-classicube-sys/.github/actions/install-build-test@main
         with:
-          submodules: recursive
+          target: x86_64-pc-windows-msvc
 
-      - name: Install rust
-        run: |
-          rustup default stable
-          rustup component add rustfmt
-          rustup target add x86_64-pc-windows-msvc
-
-      - name: Build
-        run: |
-          cargo build --target x86_64-pc-windows-msvc
-
-      - name: Test
-        run: |
-          cargo test --target x86_64-pc-windows-msvc -- --nocapture --test-threads 1
-
-      - name: Doc
-        if: ${{ github.ref == 'refs/heads/main' }}
-        run: |
-          cargo doc --target x86_64-pc-windows-msvc
-
-      - name: Deploy docs
-        uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e # v4.0.0
+      - uses: ./.github/actions/deploy-docs
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./target/x86_64-pc-windows-msvc/doc
-          force_orphan: true
+          target: x86_64-pc-windows-msvc
 
-  linux:
+  windows-i686:
+    runs-on: windows-2025
+    steps:
+      - uses: SpiralP/rust-classicube-sys/.github/actions/install-build-test@main
+        with:
+          target: i686-pc-windows-msvc
+
+  linux-x86_64:
     runs-on: ubuntu-24.04
-
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: SpiralP/rust-classicube-sys/.github/actions/install-build-test@main
         with:
-          submodules: recursive
+          target: x86_64-unknown-linux-gnu
 
-      - name: Install rust
+  linux-i686:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Install deps
         run: |
-          rustup default stable
-          rustup component add rustfmt
-          rustup target add x86_64-unknown-linux-gnu
+          sudo apt-get -y update
+          sudo apt-get -y install gcc-multilib g++-multilib
 
-      - name: Build
-        run: |
-          cargo build --target x86_64-unknown-linux-gnu
+      - uses: SpiralP/rust-classicube-sys/.github/actions/install-build-test@main
+        with:
+          target: i686-unknown-linux-gnu
 
-      - name: Test
-        run: |
-          cargo test --target x86_64-unknown-linux-gnu -- --nocapture --test-threads 1
-
-  mac:
+  mac-x86_64:
     runs-on: macos-14
-
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: SpiralP/rust-classicube-sys/.github/actions/install-build-test@main
         with:
-          submodules: recursive
+          target: x86_64-apple-darwin
 
-      - name: Install rust
-        run: |
-          rustup default stable
-          rustup component add rustfmt
-          rustup target add x86_64-apple-darwin
-
-      - name: Build
-        run: |
-          cargo build --target x86_64-apple-darwin
-
-      - name: Test
-        run: |
-          cargo test --target x86_64-apple-darwin -- --nocapture --test-threads 1
+  mac-aarch64:
+    runs-on: macos-14
+    steps:
+      - uses: SpiralP/rust-classicube-sys/.github/actions/install-build-test@main
+        with:
+          target: aarch64-apple-darwin
